--- a/web/src/main/resources/templates/owners/index.html
+++ b/web/src/main/resources/templates/owners/index.html
@@ -5,6 +5,24 @@
     <title>List of Pet Owners</title>
 </head>
 <body>
+<!--/*@thymesVar id="owner" type="com.autotradingwiz.animalclinicmanagement.models.Owner"*/-->
     <h1 th:text="'List of Owners'">Owners List</h1>
+
+    <table>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="owner : ${owners}">
+            <td th:text="${owner.id}">3</td>
+            <td th:text="${owner.firstName}">Joe</td>
+            <td th:text="${owner.lastName}">Buck</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
